--- a/templates/instagram.html
+++ b/templates/instagram.html
@@ -6,18 +6,30 @@
 
 <div class="container-fluid">
     <h1 style="text-decoration: underline;" class="mt-4">Instagram</h1><br>
-    <h4 style="font-weight: normal;">- You can download the pictures, videos, and captions involved with a public account.</h4>
-    
-    <h4 style="font-weight: normal;">- The information is downloaded as a folder with JPG files for images and TXT files for captions.</h4>
-    <br><div class="alert alert-danger" role="alert">
-        <strong>Warning!</strong> Depending on how many posts a certain user has, the downloading process will take different amounts of time.
+
+    <h4 style="font-weight: normal;">- You can download the pictures, videos, and captions involved with a public
+        account.</h4>
+
+    <h4 style="font-weight: normal;">- The information is downloaded as a folder with JPG files for images and TXT files
+        for captions.</h4>
+
+    <br>
+
+    <div class="alert alert-danger" role="alert">
+        <strong>Warning!</strong> Depending on how many posts a certain user has, the downloading process will take
+        different amounts of time.
     </div>
-    <br><form autocomplete="off" action="{{ url_for('instagram') }}" method="POST">
+
+    <br>
+
+    <form autocomplete="off" action="{{ url_for('instagram') }}" method="POST">
         <div class="input-group mb-3">
-            <div class="input-group-prepend">
-            </div>
+            <div class="input-group-prepend"></div>
             <input required name="account_name" placeholder="Account name that you want to investigate..." type="text" class="form-control">
-        </div><br>
+        </div>
+        
+        <br>
+
         <input type="submit" class="btn btn-primary"></input>
     </form>
 </div>
