--- a/templates/home.html
+++ b/templates/home.html
@@ -5,9 +5,16 @@
 {% block content %}
 
 <div class="container-fluid">
-    <h1 style="text-decoration: underline;" class="mt-4">Home</h1><br>
-    <h4 style="font-weight: normal;">This is a website for downloading the data involved with any social media account. There are currently three social media platforms supported. They are listed on the sidebar to the left.</h4>
-    <br><p>- Made with ❤ by Jacob C. at <a href="https://github.com/jacobc2700/social-download">this</a> repository.</p>
+    <h1 style="text-decoration: underline;" class="mt-4">Home</h1>
+    
+    <br>
+
+    <h4 style="font-weight: normal;">This is a website for downloading the data involved with any social media account.
+        There are currently three social media platforms supported. They are listed on the sidebar to the left.</h4>
+        
+    <br>
+
+    <p>- Made with ❤ by Jacob C. at <a href="https://github.com/jacobc2700/social-download">this</a> repository.</p>
 </div>
 
 {% endblock content %}
