--- a/templates/vsco.html
+++ b/templates/vsco.html
@@ -7,17 +7,25 @@
 <div class="container-fluid">
     <h1 style="text-decoration: underline;" class="mt-4">VSCO</h1><br>
     <h4 style="font-weight: normal;">- You can download the pictures involved with a public account.</h4>
-    
     <h4 style="font-weight: normal;">- The information is downloaded as a folder with JPG files for images.</h4>
-    <br><div class="alert alert-danger" role="alert">
-        <strong>Warning!</strong> Depending on how many pictures a certain user has, the downloading process will take different amounts of time.
+
+    <br/>
+
+    <div class="alert alert-danger" role="alert">
+        <strong>Warning!</strong> Depending on how many pictures a certain user has, the downloading process will take
+        different amounts of time.
     </div>
-    <br><form autocomplete="off" action="{{ url_for('vsco') }}" method="POST">
+
+    <br/>
+
+    <form autocomplete="off" action="{{ url_for('vsco') }}" method="POST">
         <div class="input-group mb-3">
-            <div class="input-group-prepend">
-            </div>
+            <div class="input-group-prepend"></div>
             <input required name="account_name" placeholder="Account name that you want to investigate..." type="text" class="form-control">
-        </div><br>
+        </div>
+        
+        <br>
+        
         <input type="submit" class="btn btn-primary"></input>
     </form>
 </div>
